WIP : generic attachment reader

--- a/www/app/apps/docApprove/TSK/tskDetails.html
+++ b/www/app/apps/docApprove/TSK/tskDetails.html
@@ -156,9 +156,9 @@
                   <i class="icon ion-clipboard"></i>
                   <h2 class="text-right pele_rtl">נספחי משימה</h2>
                 </div>
-                <div class="item-section pele_rtl">
-                  <div class="pele_rtl" ng-click="openAttachment(file)" class="pele_rtl" ng-class="'show_content_'+file.SHOW_CONTENT" ng-show="file.DISPLAY=='Y'" ng-repeat="file in docDetails.attachments">
-                    {{file.DISPLAY_NAME}}
+                <div class="item-section">
+                  <div ng-click="openAttachment(file)" class="attach_file pele_rtl" ng-show="file.DISPLAY=='Y'" ng-repeat="file in docDetails.attachments">
+                    <span ng-class="'show_content_'+file.SHOW_CONTENT"> {{file.DISPLAY_NAME}}</span> <span>.{{$index}} </span>
                   </div>
                 </div>
               </li>
