--- a/www/app/apps/dev/errors.html
+++ b/www/app/apps/dev/errors.html
@@ -11,15 +11,15 @@
     </div>
   </ion-nav-title>
   <ion-content>
-
     <ion-list>
       <ion-item ng-show="!errors.length">
         <strong>Errors Stack is empty         <i class="icon ion-android-happy"></i> </strong>
       </ion-item>
       <ion-item class="item item-body" ng-repeat="e in errors">
-        lastStateInfo
-      
-        <div><strong>Network :</strong> {{e.network.network|| "No network"}} |  <strong>Online :</strong> {{e.network.online}}</div>
+        <span class="pel-badge">{{$index+1}}</span>
+        <div><strong>App state :</strong> {{e.state}} </div>
+        <div><strong>Category :</strong> {{e.category|| "No network"}} </div>
+        <div><strong>Network :</strong> {{e.network.network|| "No network"}} </div>
         <div><strong>Created :</strong> {{e.created|date :'dd/M/yyyy HH:mm'}}</div>
         <div><strong>Description :</strong> {{e.description}}</div>
       </ion-item>
