--- a/www/app/apps/dev/errors.html
+++ b/www/app/apps/dev/errors.html
@@ -16,7 +16,7 @@
         <strong>Errors Stack is empty         <i class="icon ion-android-happy"></i> </strong>
       </ion-item>
       <ion-item class="item item-body" ng-repeat="e in errors">
-        <span class="pel-badge">{{$index+1}}</span>
+        <div><span class="pel-badge">{{$index+1}}</span> Display error page :{{e.redirect}}</div>
         <div><strong>App state :</strong> {{e.state}} </div>
         <div><strong>Category :</strong> {{e.category|| "No network"}} </div>
         <div><strong>Network :</strong> {{e.network.network|| "No network"}} </div>
