--- a/www/app/apps/docApprove/PO/p3_po_moduleDocList.html
+++ b/www/app/apps/docApprove/PO/p3_po_moduleDocList.html
@@ -1,4 +1,4 @@
-<ion-view class="feed-entries-view " cache-view="false" ng-show="title">
+<ion-view class="feed-entries-view " cache-view="false">
 
   <ion-nav-buttons side="right">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
