--- a/www/app/apps/docApprove/PO/p4_po_doc_10002.html
+++ b/www/app/apps/docApprove/PO/p4_po_doc_10002.html
@@ -18,14 +18,14 @@
     <tab-slide-box class="new-tab-slide-box">
       <div class="tsb-icons">
         <div class="tsb-ic-wrp">
-          <ion-scroll direction="x" class="tsb-hscroll">
-            <a href="javascript:;" class="triangle-isosceles {{tab.icon}}" ng-repeat="tab in tabs" on-finish-render="test()">
+            <ion-scroll has-bouncing="false" scrollX="false" direction="x" scrollY="false" class="tsb-hscroll">
+               <a  class="triangle-isosceles {{tab.icon}}" ng-repeat="tab in tabs" on-finish-render="test()">
               {{tab.text}}
             </a>
           </ion-scroll>
         </div>
       </div>
-      <ion-slide-box show-pager="false" on-drag-right="alert(1)" on-slide-changed="enable();slideHasChanged(index)">
+      <ion-slide-box show-pager="false" on-slide-changed="enable();slideHasChanged(index)">
 
         <!-------------------------------------------------------------------------------->
         <!----------------------------- Approve List Slide ------------------------------->
