--- a/www/app/apps/docApprove/TSK/tskList.html
+++ b/www/app/apps/docApprove/TSK/tskList.html
@@ -22,13 +22,13 @@
     </label>
 
     <ion-list>
-      <div class="docs-menu"  ng-repeat="docsGroup in docsGroups">
+      <div class="docs-menu" ng-repeat="docsGroup in docsGroups">
         <ion-item class="docs-menu-head item-stable" ng-click="docsGroup.active=!docsGroup.active" ng-class="{active: docsGroup.active}">
           <a ng-class="docsGroup.active ? 'icon-expand' : 'icon-collapse'"></a> {{docsGroup.DOC_NAME}} <span class="pel-badge">{{filtered.length}}</span>
         </ion-item>
-        <ion-item class="docs-menu-details item-icon-left pele_rtl" ng-repeat="item in docsGroup.DOCUMENTS.DOCUMENTS_ROW | filter:searchText as filtered"  ng-show="docsGroup.active" ng-click="forwardToDoc(docsGroup.DOC_ID, item.DOC_INIT_ID)">
+        <ion-item class="docs-menu-details item-icon-left pele_rtl" ng-repeat="item in docsGroup.DOCUMENTS.DOCUMENTS_ROW | filter:searchText as filtered" ng-show="docsGroup.active" ng-click="forwardToDoc(docsGroup.DOC_ID, item.DOC_INIT_ID,item.TASK.NOTIFICATION_ID)">
           <img class="icon" ng-src="img/DocApprove/document_redirect.png">
-          <div class="docs-menu-item-title"> משימה {{item.DOC_INIT_ID}} </div>
+          <div class="docs-menu-item-title"> משימה {{item.DOC_INIT_ID}}</div>
           <div><strong>{{item.TASK.BAN_NAME}}</strong></div>
           <div>סיום משוער לטיפול בלקוח
             <span class="peldate">{{item.TASK.PLANNED_END_DATE|peldate | date : 'hh:ss dd-MM-yyyy'}}</span> </div>
