add scan print app

--- a/www/app/apps/docApprove/INI/iniList.html
+++ b/www/app/apps/docApprove/INI/iniList.html
@@ -1,36 +1,33 @@
-<ion-view class="feed-entries-view " cache-view="false">
+<ion-view cache-view="false">
   <ion-nav-buttons side="right">
     <button menu-toggle="left" class="button button-icon icon ion-navicon">
     </button>
   </ion-nav-buttons>
   <ion-nav-title>
     <div class="bar bar-header bar-positive">
-      <div class="title">{{title}}
-        <!--<img src="img/DocApprove/logo.png" style="max-width: 100%;  height: 100%;"/>-->
-      </div>
+      <div class="title">{{title}}</div>
     </div>
   </ion-nav-title>
 
   <ion-content class="pele-background" onload="doRefresh()">
-    <!-- Refresh to get the new posts -->
     <ion-refresher pulling-text="משוך לרענון..." on-refresh="doRefresh()">
     </ion-refresher>
 
 
-    <label class="item item-input item-search" ng-click="searchBarCreteria()">
+    <label class="item item-input item-search">
 
-      <input type="search" class="search-area" style="color:#fafafa;" placeholder="חיפוש"ng-model="searchText.text">
+      <input type="search" class="search-area" style="color:#fafafa;" placeholder="חיפוש" ng-model="searchText">
       <a class="search-icon" ></a>
     </label>
 
     <ion-list>
       <div class="docs-menu" ng-repeat="docsGroup in docsGroups">
         <ion-item class="docs-menu-head item-stable" ng-click="docsGroup.active=!docsGroup.active" ng-class="{active: docsGroup.active}">
-          <a ng-class="docsGroup.active ? 'icon-expand' : 'icon-collapse'"></a> {{docsGroup.DOC_NAME}} <span class="pel-badge">{{docsGroup.FORM_QTY}}</span>
+          <a ng-class="docsGroup.active ? 'icon-expand' : 'icon-collapse'"></a> {{docsGroup.DOC_NAME}} <span class="pel-badge">{{filtered.length}}</span>
         </ion-item>
-        <ion-item class="docs-menu-details item-icon-left pele_rtl" ng-repeat="item in docsGroup.DOCUMENTS.DOCUMENTS_ROW | filter:searchText.text" ng-show="docsGroup.active" ng-click="forwardToDoc(docsGroup.DOC_ID, item.DOC_INIT_ID)">
+        <ion-item class="docs-menu-details item-icon-left pele_rtl" ng-repeat="item in docsGroup.DOCUMENTS.DOCUMENTS_ROW | filter:searchText as filtered" ng-show="docsGroup.active" ng-click="forwardToDoc(docsGroup.DOC_ID, item.DOC_INIT_ID,item.TASK.NOTIFICATION_ID)">
           <img class="icon" ng-src="img/DocApprove/document_redirect.png">
-          <div class="docs-menu-item-title"> משימה {{item.DOC_INIT_ID}} </div>
+          <div class="docs-menu-item-title"> משימה {{item.DOC_INIT_ID}}</div>
           <div><strong>{{item.TASK.BAN_NAME}}</strong></div>
           <div>סיום משוער לטיפול בלקוח
             <span class="peldate">{{item.TASK.PLANNED_END_DATE|peldate | date : 'hh:ss dd-MM-yyyy'}}</span> </div>
