--- a/www/app/apps/docApprove/INI/iniDetails.html
+++ b/www/app/apps/docApprove/INI/iniDetails.html
@@ -73,12 +73,13 @@
           <ion-scroll class="pele_rtl text-right" style="height:80%" delegate-handle="slide1Scroll">
             <!-- Refresh to get the new posts -->
             <ul class="list">
-              <li class="item no-border">
-                <div class="item item-divider item-icon-right">
+              <li class="item item-info no-border">
+                <div class="item item-divider item-icon-right item-icon-left" ng-init="info_elm=true" ng-click="info_elm=!info_elm">
+                  <i class="icon" ng-class="info_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
                   <i class="icon ion-clipboard"></i>
                   <h2 class="text-right pele_rtl">פרטי המשימה</h2>
                 </div>
-                <div class="item-section">
+                <div class="item-section" ng-show="info_elm">
                   <table class="pele_rtl text-right">
                     <tbody>
                       <tr>
@@ -109,14 +110,13 @@
                   </table>
                 </div>
               </li>
-              <li class="item item-info no-border" ng-init="toggleInit('sys_data',true)">
-                <div class="item item-divider item-icon-left item-icon-right">
-
-                  <i class="icon" ng-class="sys_data.icon" ng-click="toggle(sys_data)"></i>
+              <li class="item item-info no-border">
+                <div class="item item-divider item-icon-right item-icon-left" ng-init="sys_data=false" ng-click="sys_data=!sys_data">
+                  <i class="icon" ng-class="sys_data ? 'ion-chevron-down' :'ion-chevron-left'"></i>
                   <h2 class="text-right pele_rtl">נתוני מערכת</h2>
                   <i class="icon ion-clipboard"></i>
                 </div>
-                <div class="item-section" ng-show="sys_data.display">
+                <div class="item-section" ng-show="sys_data">
                   <table class="pele_rtl text-right">
                     <tbody>
                       <tr class="pele_rtl" ng-repeat="item in docDetails.SYSTEM_INFORMATION">
@@ -128,12 +128,12 @@
                 </div>
               </li>
               <li class="item item-info no-border">
-                <div class="item item-divider item-icon-right item-icon-left" ng-init="toggleInit('extra_elm')">
-                  <i class="icon" ng-class="extra_elm.icon" ng-click="toggle(extra_elm)"></i>
+                <div class="item item-divider item-icon-right item-icon-left" ng-init="extra_elm=false" ng-click="extra_elm=!extra_elm">
+                  <i class="icon" ng-class="extra_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
                   <h2 class="text-right pele_rtl">נתונים נוספים</h2>
                   <i class="icon ion-clipboard"></i>
                 </div>
-                <div class="item-section" ng-show="extra_elm.display">
+                <div class="item-section" ng-show="extra_elm">
                   <table class="pele_rtl text-right">
                     <tbody>
                       <tr class="pele_rtl" ng-repeat="item in docDetails.EXTRA_INFORMATION">
@@ -152,14 +152,22 @@
                 </div>
               </li-->
               <li class="item item-info no-border">
-                <div class="item item-divider item-icon-right">
-                  <i class="icon ion-clipboard"></i>
+                <div class="item item-divider item-icon-right item-icon-left" ng-init="attach_elm=true" ng-click="attach_elm=!attach_elm">
+                  <i class="icon" ng-class="attach_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
                   <h2 class="text-right pele_rtl">נספחי משימה</h2>
+                  <i class="icon ion-paperclip"></i>
                 </div>
-                <div class="item-section pele_rtl">
-                  <div class="pele_rtl" ng-repeat="file in docDetails.attachments">
-                    <span>{{file.name}}</span>
-                  </div>
+                <div class="item-section" ng-show="attach_elm">
+                  <table class="pele_rtl attachments-table text-right">
+                    <tbody>
+                      <tr class="pele_rtl" ng-repeat="file in docDetails.attachments | filter:{ DISPLAY: 'Y' }">
+                        <td class="num_index"> {{$index+1}} . </td>
+                        <td class="info pele_ltr">
+                          <span ng-click="openAttachment(file)" ng-class="'show_content_'+file.SHOW_CONTENT"> {{file.DISPLAY_NAME}}</span>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
               </li>
             </ul>
