--- a/www/app/apps/docApprove/INI/p4_ini_doc_30002.html
+++ b/www/app/apps/docApprove/INI/p4_ini_doc_30002.html
@@ -1,5 +1,4 @@
-<ion-view class="feed-entries-view">
-
+<ion-view>
   <ion-nav-buttons side="right">
     <button menu-toggle="left" class="button button-icon icon ion-navicon">
     </button>
