--- a/www/app/apps/docApprove/PO/p4_po_doc_10002.html
+++ b/www/app/apps/docApprove/PO/p4_po_doc_10002.html
@@ -80,21 +80,23 @@
             <ul class="list text-right">
               <!---------------------------- 10002 --------------------------------->
               <li class="item item-info no-border">
-                <div class="item item-divider item-icon-right" ng-click="PO_COMMENTS_SHOW = !PO_COMMENTS_SHOW">
-                  <i class="icon ion-clipboard"></i>
+                <div class="item item-divider item-icon-right item-icon-left" ng-init="info_elm=true" ng-click="info_elm=!info_elm">
+                  <i class="icon" ng-class="info_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
+
                   <h2 class="text-right pele_rtl">תיאור הזמנה</h2>
                 </div>
 
-                <div class="item-section pele_rtl item-text-wrap" ng-show="PO_COMMENTS_SHOW">
+                <div class="item-section pele_rtl item-text-wrap" ng-show="info_elm">
                   {{COMMENTS}}
                 </div>
               </li>
               <li class="item item-info no-border">
-                <div class="item item-divider item-icon-right" ng-click="PO_DETAILS_SHOW = !PO_DETAILS_SHOW">
-                  <i class="icon ion-clipboard"></i>
+                <div class="item item-divider item-icon-right item-icon-left" ng-init="details_elm=true" ng-click="details_elm=!details_elm">
+                  <i class="icon" ng-class="details_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
                   <h2 class="text-right pele_rtl">פרטי הזמנה</h2>
+                  <i class="icon ion-clipboard"></i>
                 </div>
-                <div class="item-section" ng-show="PO_DETAILS_SHOW">
+                <div class="item-section" ng-show="details_elm">
                   <table class="pele_rtl text-right">
                     <tbody>
                       <tr>
@@ -122,61 +124,73 @@
                 </div>
               </li>
               <li class="item item-info no-border">
-                <div class="item item-divider item-icon-right" ng-click="PO_EXPLAIN_SHOW = !PO_EXPLAIN_SHOW">
-                  <i class="icon ion-clipboard"></i>
+                <div class="item item-divider item-icon-right item-icon-left" ng-init="extra_elm=false" ng-click="extra_elm=!extra_elm">
+                  <i class="icon" ng-class="extra_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
                   <h2 class="text-right pele_rtl">הסבר כללי</h2>
+                  <i class="icon ion-clipboard"></i>
                 </div>
 
-                <div class="item-section pele_rtl item-text-wrap" ng-show="PO_EXPLAIN_SHOW">
+                <div class="item-section pele_rtl item-text-wrap" ng-show="extra_elm">
                   {{PO_EXPLAIN}}
                 </div>
               </li>
               <li class="item item-info no-border">
-                <div class="item item-divider item-icon-right" ng-click="PO_SUPPLIER_REASON_SHOW = !PO_SUPPLIER_REASON_SHOW">
-                  <i class="icon ion-clipboard"></i>
+                <div class="item item-divider item-icon-right item-icon-left" ng-init="reason_elm=false" ng-click="reason_elm=!reason_elm">
+                  <i class="icon" ng-class="reason_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
                   <h2 class="text-right pele_rtl">נימוק לבחירת ספק</h2>
+                  <i class="icon ion-clipboard"></i>
                 </div>
 
-                <div class="item-section pele_rtl item-text-wrap" ng-show="PO_SUPPLIER_REASON_SHOW">
+                <div class="item-section pele_rtl item-text-wrap" ng-show="reason_elm">
                   {{SUPPLIER_REASON}}
                 </div>
               </li>
               <li class="item item-info no-border">
-                <div class="item item-divider item-icon-right" ng-click="PO_MATCH_PRICE_SHOW=!PO_MATCH_PRICE_SHOW">
-                  <i class="icon ion-calculator"></i>
+                <div class="item item-divider item-icon-right item-icon-left" ng-init="prices_elm=false" ng-click="prices_elm=!prices_elm">
+                  <i class="icon" ng-class="prices_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
                   <h2 class="text-right pele_rtl">השוואת מחירים</h2>
+                  <i class="icon ion-calculator"></i>
                 </div>
-
-                <div class="item-section pele_rtl item-text-wrap" ng-show="PO_MATCH_PRICE_SHOW">
-                  <div ng-repeat="matchPricerow in MATCH_PRICE">
-                    <div class="card">
-                      <div class="item item-divider text-right pele_rtl">
-                        שם ספק :{{matchPricerow.VENDOR_NAME}}
+                <div class="item-section pele_rtl item-text-wrap" ng-show="prices_elm">
+                  <div ng-show="MATCH_PRICE.length==0">
+                    לא קיים מידע רלוונטי
+                  </div>
+                </div>
+                <div ng-repeat="matchPricerow in MATCH_PRICE">
+                  <div class="card">
+                    <div class="item item-divider text-right pele_rtl">
+                      שם ספק :{{matchPricerow.VENDOR_NAME}}
+                    </div>
+                    <div class="row ">
+                      <div class="item item-text-wrap text-right pele_rtl">
+                        מחיר סופי: {{matchPricerow.TOTAL_PRICE}}
                       </div>
-                      <div class="row ">
-                        <div class="item item-text-wrap text-right pele_rtl">
-                          מחיר סופי: {{matchPricerow.TOTAL_PRICE}}
-                        </div>
-                        <div class="item item-text-wrap text-right pele_rtl">
-                          מחיר ראשוני: {{matchPricerow.UNIT_PRICE}}
-                        </div>
+                      <div class="item item-text-wrap text-right pele_rtl">
+                        מחיר ראשוני: {{matchPricerow.UNIT_PRICE}}
                       </div>
                     </div>
                   </div>
                 </div>
+                </div>
               </li>
               <li class="item item-info no-border">
-                <div class="item item-divider item-icon-right" ng-click="PO_ATTACHED_DOCUMENTS_SHOW = !PO_ATTACHED_DOCUMENTS_SHOW">
-                  <i class="icon ion-clipboard"></i>
+                <div class="item item-divider item-icon-right item-icon-left" ng-init="attach_elm=false" ng-click="attach_elm=!attach_elm">
+                  <i class="icon" ng-class="attach_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
                   <h2 class="text-right pele_rtl">נספחי הזמנה</h2>
+                  <i class="icon ion-paperclip"></i>
                 </div>
 
-                <div class="item-section pele_rtl item-text-wrap" ng-show="PO_ATTACHED_DOCUMENTS_SHOW">
-                  <div class="item-text-wrap text-right pele_rtl" ng-repeat="document in ATTACHED_DOCUMENTS" ng-show="PO_ATTACHED_DOCUMENTS_SHOW">
-                    <!-- <p class="under" style="color:blue" ng-click="openAttachedFile(document.OPEN_FILE_NAME,  document.FULL_FILE_NAME , document.FILE_TYPE ,document.FILE_MAOF_TYPE , document.SHORT_TEXT , document.LONG_TEXT , document.IS_FILE_OPENED_ON_MOBILE , document.IOS_OPEN_FILE_NAME )">{{document.FILE_NAME}}</p>-->
-                    <p class="under" ng-style="getAttachmentLinkStyle(document.IS_FILE_OPENED_ON_MOBILE)" ng-click="openAttachedFile(document.OPEN_FILE_NAME,  document.FULL_FILE_NAME , document.FILE_TYPE ,document.FILE_MAOF_TYPE , document.SHORT_TEXT , document.LONG_TEXT , document.IS_FILE_OPENED_ON_MOBILE , document.IOS_OPEN_FILE_NAME )">{{document.FILE_NAME}}</p>
-                  </div>
-
+                <div class="item-section pele_rtl item-text-wrap" ng-show="attach_elm">
+                  <table class="pele_rtl attachments-table text-right">
+                    <tbody>
+                      <tr class="pele_rtl" ng-repeat="document in ATTACHED_DOCUMENTS">
+                        <td class="info pele_ltr ">
+                          <p class="under " ng-style="getAttachmentLinkStyle(document.IS_FILE_OPENED_ON_MOBILE) " ng-click="openAttachedFile(document.OPEN_FILE_NAME, document.FULL_FILE_NAME , document.FILE_TYPE ,document.FILE_MAOF_TYPE , document.SHORT_TEXT
+                              , document.LONG_TEXT , document.IS_FILE_OPENED_ON_MOBILE , document.IOS_OPEN_FILE_NAME ) ">{{document.FILE_NAME}}</p>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
               </li>
             </ul>
@@ -189,31 +203,31 @@
 
   <!-- Footer Actions -->
 
-  <ion-footer-bar align-title="right">
+  <ion-footer-bar align-title="right ">
 
-    <div class="row">
-      <div class="col">
-        <button class="button button-block button-large button-positive  icon-right ion-paper-airplane" ng-click="showBtnActions()">פעולות</button>
+    <div class="row ">
+      <div class="col ">
+        <button class="button button-block button-large button-positive icon-right ion-paper-airplane " ng-click="showBtnActions() ">פעולות</button>
       </div>
 
-      <div class="col">
-        <button class="button button-block button-large button-balanced icon-right ion-document-text" ng-click="NotePopup()">הערה</button>
+      <div class="col ">
+        <button class="button button-block button-large button-balanced icon-right ion-document-text " ng-click="NotePopup() ">הערה</button>
       </div>
     </div>
   </ion-footer-bar>
   <!-- Note Pop Up -->
-  <script id="templates/modal.html" type="text/ng-template">
+  <script id="templates/modal.html " type="text/ng-template ">
     <ion-modal-view>
-      <ion-header-bar class="bar bar-header bar-positive">
-        <h1 class="title">הערה חדשה</h1>
-        <button class="button button-clear button-primary" ng-click="modal.hide()">ביטול</button>
+      <ion-header-bar class="bar bar-header bar-positive ">
+        <h1 class="title ">הערה חדשה</h1>
+        <button class="button button-clear button-primary " ng-click="modal.hide() ">ביטול</button>
       </ion-header-bar>
-      <ion-content class="padding">
-        <div class="list" dir="RTL">
-          <label class="item item-input">
-            <textarea rows="8" ng-model="newNote.Note" type="text"></textarea>
+      <ion-content class="padding ">
+        <div class="list " dir="RTL ">
+          <label class="item item-input ">
+            <textarea rows="8 " ng-model="newNote.Note " type="text "></textarea>
           </label>
-          <button class="button button-full button-positive" ng-click="createNote(newNote)">שמירה</button>
+          <button class="button button-full button-positive " ng-click="createNote(newNote) ">שמירה</button>
         </div>
       </ion-content>
     </ion-modal-view>
