--- a/www/app/apps/docApprove/INI/iniDetails.html
+++ b/www/app/apps/docApprove/INI/iniDetails.html
@@ -39,7 +39,7 @@
                   </div>
                   <div class="row">
                     <div class="col">תאריך:</div>
-                    <div class="col col-75">{{action.ACTION_DATE}}</div>
+                    <div class="col col-75">{{action.ACTION_DATE| date : 'hh:ss dd-MM-yyyy'}}</div>
                   </div>
                   <div class="row">
                     <div class="col">הערות:</div>
@@ -91,7 +91,7 @@
                       </tr>
                       <tr>
                         <td class="label">הצדקת ייזום: </td>
-                        <td class="info"> {{docDetails.SUB_TASK_TYPE}}</td>
+                        <td class="info"> {{docDetails.NOTE_TO_APPROVER}}</td>
                       </tr>
                       <tr>
                         <td class="label">ספק מומלץ: </td>
