fix http timeout issues

--- a/www/app/apps/docApprove/p2_moduleList.html
+++ b/www/app/apps/docApprove/p2_moduleList.html
@@ -23,7 +23,8 @@
     <div ng-if="1" class="apps-front-menu">
       <div class="menu-item" ng-repeat="source in category_sources">
         <button ng-click="onClick(source.MODULE_NAME ,source.DOCUMENT_QTY )" class="button button-large button-stable button-block item-icon-right">
-      {{source.MODULE_DESC}} <span class="pel-badge">{{source.DOCUMENT_QTY}}</span>
+      {{source.MODULE_DESC}} <span class="pel-badge blue">{{source.DOCUMENT_QTY}}</span>
+
       </button>
       </div>
     </div>
