--- a/www/app/apps/docApprove/HR/p3_moduleDocList.html
+++ b/www/app/apps/docApprove/HR/p3_moduleDocList.html
@@ -28,9 +28,8 @@
     <ion-list>
       <div class="docs-menu" ng-repeat="docsGroup in docsGroups">
         <ion-item class="docs-menu-head item-stable" ng-click="toggleGroup(docsGroup.DOC_ID)" ng-class="{active: isGroupShown(docsGroup.DOC_ID)}">
-          <i ng-class="isGroupShown(docsGroup.DOC_ID) ? 'icon-expand' : 'icon-collapse'"> </i>
-          {{docsGroup.DOC_NAME}}
-          <span class="pel-badge">{{docsGroup.FORM_QTY}}</span>
+          <i ng-class="isGroupShown(docsGroup.DOC_ID) ? 'icon-expand' : 'icon-collapse'"> </i> {{docsGroup.DOC_NAME}}
+          <span class="pel-badge light-blue">{{docsGroup.FORM_QTY}}</span>
         </ion-item>
 
         <ion-item class="item-doc-list pele_rtl" ng-repeat="item in docsGroup.DOCUMENTS.DOCUMENTS_ROW | filter:searchText.text" ng-show="isGroupShown(docsGroup.DOC_ID)" ng-click="forwardToDoc(item.DOC_ID, item.DOC_INIT_ID)">
