--- a/www/app/apps/docApprove/HR/p4_doc_242.html
+++ b/www/app/apps/docApprove/HR/p4_doc_242.html
@@ -32,7 +32,7 @@
         <!----------------------------- Approve List Slide ------------------------------->
         <!-------------------------------------------------------------------------------->
         <ion-slide on-drag-left="enable('drag')" on-drag-right="disable('drag')">
-          <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
+          <ion-scroll scrollX="false" style="height:80%" delegate-handle="slide1Scroll">
             <div ng-repeat="detail in ACTION_HISTORY" type="item-text-wrap" dir="RTL">
               <!--<div class="item item-divider "> -->
               <a class="item item-divider item-icon-right pele-item-icon-left" ng-click="detail.SHOW_FLAG = !detail.SHOW_FLAG; detail.PUSH_COUNT = PUSH_COUNT +1;">
@@ -69,7 +69,7 @@
         <!----------------------------- Doc Details Slide ------------------------------->
         <!------------------------------------------------------------------------------->
         <ion-slide on-drag-right="enable('drag')" on-drag-left="disable('drag')">
-          <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
+          <ion-scroll scrollX="false" style="height:80%" delegate-handle="slide1Scroll">
             <!-- Refresh to get the new posts -->
             <label class="item item-thumbnail-left">
               <img src="img/employees/worker.png">
