--- a/www/app/apps/docApprove/INI/iniList.html
+++ b/www/app/apps/docApprove/INI/iniList.html
@@ -21,7 +21,7 @@
     </label>
 
     <ion-list>
-      <div class="docs-menu" ng-repeat="docsGroup in docsGroups">
+      <div ng-if="accordion" class="docs-menu" ng-repeat="docsGroup in docsGroups">
         <ion-item class="docs-menu-head item-stable" ng-click="docsGroup.active=!docsGroup.active" ng-class="{active: docsGroup.active}">
           <a ng-class="docsGroup.active ? 'icon-expand' : 'icon-collapse'"></a> {{docsGroup.DOC_NAME}} <span class="pel-badge light-blue">{{filtered.length}}</span>
         </ion-item>
@@ -31,7 +31,14 @@
           <div class="ellipsis"> {{item.INFO.DESCRIPTION}}</div>
           <div>תאריך יצירה: <span class="peldate">{{item.INFO.CREATION_DATE| date : 'hh:ss dd-MM-yyyy'}}</span> </div>
         </div>
-
+      </div>
+      <div ng-if="!accordion" class="docs-menu" ng-repeat="docsGroup in docsGroups">
+        <div class="item docs-menu-details item-icon-left pele_rtl" ng-repeat="item in docsGroup.DOCUMENTS.DOCUMENTS_ROW | filter:searchText as filtered" ng-click="forwardToDoc(docsGroup.DOC_ID, item.DOC_INIT_ID,item.INFO.NOTIFICATION_ID)">
+          <img class="icon" ng-src="img/DocApprove/document_redirect.png">
+          <div class="docs-menu-item-title">ייזום {{item.DOC_INIT_ID}} - {{item.INFO.AMOUNT}} {{item.INFO.CURRENCY_CODE}}</div>
+          <div class="ellipsis"> {{item.INFO.DESCRIPTION}}</div>
+          <div>תאריך יצירה: <span class="peldate">{{item.INFO.CREATION_DATE| date : 'hh:ss dd-MM-yyyy'}}</span> </div>
+        </div>
       </div>
       </div>
     </ion-list>
