--- a/www/app/apps/docApprove/RQ/p4_rq_doc_20002.html
+++ b/www/app/apps/docApprove/RQ/p4_rq_doc_20002.html
@@ -29,7 +29,7 @@
         <!----------------------------- Approve List Slide ------------------------------->
         <!-------------------------------------------------------------------------------->
         <ion-slide on-drag-left="enable('drag')" on-drag-right="disable('drag')">
-          <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
+          <ion-scroll scrollX="false" style="height:80%" delegate-handle="slide1Scroll">
             <div ng-repeat="detail in ACTION_HISTORY" type="item-text-wrap" dir="RTL">
               <!--<div class="item item-divider "> -->
               <a class="item item-divider item-icon-right pele-item-icon-left" ng-hide="pelHideShow2( detail.DISPLAY_FLAG )" ng-click="detail.SHOW_FLAG = !detail.SHOW_FLAG; detail.PUSH_COUNT = PUSH_COUNT +1; ">
@@ -66,7 +66,7 @@
         <!----------------------------- Doc Details Slide ------------------------------->
         <!------------------------------------------------------------------------------->
         <ion-slide on-drag-right="enable('drag')" on-drag-left="disable('drag')">
-          <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
+          <ion-scroll scrollX="false" style="height:80%" delegate-handle="slide1Scroll">
             <ul class="list">
               <div type="item-text-wrap" ng-click="PO_DETAILS_SHOW = !PO_DETAILS_SHOW">
                 <a class="item item-divider item-icon-left item-icon-right ">
