--- a/www/app/apps/docApprove/TSK/tskDetails.html
+++ b/www/app/apps/docApprove/TSK/tskDetails.html
@@ -25,7 +25,7 @@
         <!----------------------------- Approve List Slide ------------------------------->
         <!-------------------------------------------------------------------------------->
         <ion-slide on-drag-left="enable('drag')" on-drag-right="disable('drag')">
-          <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
+          <ion-scroll scrollX="false" style="height:80%" scrollX="false" delegate-handle="slide1Scroll">
             <div class="list">
               <div ng-repeat="action in docDetails.ACTION_HISTORY" class="pele_rtl">
                 <div class="item item-divider item-icon-left item-icon-right text-right action-history-item">
@@ -52,7 +52,7 @@
           </ion-scroll>
         </ion-slide>
         <ion-slide>
-          <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
+          <ion-scroll scrollX="false" style="height:80%" scrollX="false" delegate-handle="slide1Scroll">
             <ul class="list">
               <li class="item item-info no-border">
                 <div class="item item-divider item-icon-left item-icon-right">
@@ -70,7 +70,7 @@
         <!----------------------------- Doc Details Slide ------------------------------->
         <!------------------------------------------------------------------------------->
         <ion-slide on-drag-right="enable('drag')" on-drag-left="disable('drag')">
-          <ion-scroll class="pele_rtl text-right" style="height:80%" delegate-handle="slide1Scroll">
+          <ion-scroll class="pele_rtl text-right" scrollX="false" style="height:80%" delegate-handle="slide1Scroll">
             <!-- Refresh to get the new posts -->
             <ul class="list">
               <li class="item item-info no-border">
@@ -144,13 +144,7 @@
                   </table>
                 </div>
               </li>
-              <!--li class="item item-info no-border">
-                <div class="item item-divider item-icon-right item-icon-left" ng-init="toggleInit('desc_elm')">
-                  <i class="icon" ng-class="desc_elm.icon" ng-click="toggle(desc_elm)"></i>
-                  <i class="icon ion-clipboard"></i>
-                  <h2 class="text-right pele_rtl">תיאור</h2>
-                </div>
-              </li-->
+
               <li class="item item-info no-border">
                 <div class="item item-divider item-icon-right item-icon-left" ng-init="attach_elm=true" ng-click="attach_elm=!attach_elm">
                   <i class="icon" ng-class="attach_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
